--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-particles-js": "^3.5.3",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.3",
+    "react-tilt": "^0.1.4",
+    "react-typing-effect": "^2.0.5",
     "web-vitals": "^1.0.1"
   },
   "homepage": "https://RamanSlinka.github.io/portfolio",
