--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "emailjs-com": "^3.2.0",
+    "formik": "^2.2.9",
     "gh-pages": "^3.1.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
