--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "gh-pages": "^3.1.0",
-    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.3.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
     "react-tilt": "^0.1.4",
     "react-tsparticles": "^1.33.1",
     "react-typing-effect": "^2.0.5",
+    "sass": "^1.49.0",
     "web-vitals": "^1.0.1"
   },
   "homepage": "https://RamanSlinka.github.io/portfolio",
