--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-reveal": "^1.2.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5",
     "react-scroll": "^1.8.3",
     "react-tilt": "^0.1.4",
     "react-tsparticles": "^1.33.1",
@@ -29,7 +29,7 @@
   },
   "homepage": "https://RamanSlinka.github.io/portfolio",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
